--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar</title>
-    <!--Fonte do googleFont Inter-->
+  
     <link rel="stylesheet" href="style.css">
+
+      <!--Fonte do googleFont Inter-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="imgens/187744-881332047_small.mp4">
 </head>
 <body>
     <header>
+        <section>
+            <figure class = "gif">
+                <img src="imgens/187744-881332047_small.mp4" alt="">
+            </figure>
+        </section>
         <nav>
             <a class="logo"href="">Meu site</a>
             <ul>
