atualizando cards e produtos

--- a/contato.html
+++ b/contato.html
@@ -42,10 +42,7 @@
         </nav>
     </header>
     <main>
-        <h1>Meu Site</h1> 
-        <video autoplay muted loop>
-            <source src="imgens/video.mp4" type="video/mp4">
-        </video>
+        <h1>Contato</h1>
     </main>
 </body>
 </html>
