--- a/produtos.html
+++ b/produtos.html
@@ -6,6 +6,7 @@
     <title>Navbar</title>
   
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cards.html">
 
       <!--Fonte do googleFont Inter-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,10 +43,9 @@
         </nav>
     </header>
     <main>
-        <h1>Meu Site</h1> 
-        <video autoplay muted loop>
-            <source src="imgens/video.mp4" type="video/mp4">
-        </video>
+        <h1>Produtos</h1>
+        <iframe scrolling src="cards.html" frameborder="0"></iframe>
+
     </main>
 </body>
 </html>
